# local-web-app-starter

./: .gitignore  README.md  config.json
backend/: Cargo.toml
backend/src/: config.rs  error.rs  fs.rs  main.rs  types.rs
backend/src/db/: mod.rs  mongo.rs  mongodb.rs  sqlite.rs
backend/src/routes/bridges/: asset.rs  config.rs  db.rs  fs.rs  mod.rs  process.rs  proxy.rs  store.rs
backend/src/routes/bridges/db/: mongo.rs  sqlite.rs
backend/src/utils/: mod.rs
client/: .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: main.tsx  styles.css  utils.ts
client/src/lib/: config.ts  fs.ts  http.ts  index.ts  process.ts  store.ts  urls.ts  utils.ts
client/src/lib/db/: index.ts  mongo.ts  sqlite.ts
client/src/screens/: Home.tsx
scripts/: build.ps1  build.sh
