[package]
name = "backend"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.13.0", features = ["chrono_0_4"] }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
axum = { version = "0.8.4", features = ["macros"] }
mongodb = "3.2.3"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
bson = { version = "2.15.0", features = ["chrono-0_4"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
futures = "0.3.31"
chrono = "0.4.41"
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["io"] }
tokio-stream = "0.1.17"
